# tantivy.swift

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Package.resolved  Package.swift  README.md  build-ios.sh  gh-release.sh  rust-toolchain.toml
.github/: FUNDING.yml
Sources/TantivyFFI/: tantivy.swift
Sources/TantivyMacros/: TantivyMacros.swift
Sources/TantivyMacrosPlugin/: TantivyDocumentMacro.swift
Sources/TantivySwift/: Exports.swift  Query.swift  Schema.swift  TantivyDocumentMacro.swift  TantivySwift.swift
Sources/TantivySwiftMacros/: TantivyDocumentMacro.swift
Tests/TantivySwiftTests/: NativeSchemaTests.swift  SchemaTests.swift  TantivySwiftTests.swift
src/: lib.rs  schema-gen.rs  unicode_tokenizer.rs
