[package]
  name = "tantivy-swift"
  version = "0.3.4"
  edition = "2024"

[dependencies]
  serde = "1.0.228"
  serde_json = "1.0.145"
  # FIXME: currently there is trouble compiling zstd into iOS targets, so we disable it here
  tantivy = { version = "0.25.0", default-features = false, features = [
    "mmap",
    "stopwords",
    "lz4-compression",
  ] }
  thiserror = "2.0.17"
  unicode-segmentation = "1.12.0"
  uniffi = { version = "0.30.0", features = ["cli"] }

[build-dependencies]
  uniffi = { version = "0.30.0", features = ["build"] }

[lib]
  crate-type = ["cdylib", "staticlib"]
  name = "tantivy"

[[bin]]
  # This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
  name = "uniffi-bindgen"
  path = "src/uniffi-bindgen.rs"

[[bin]]
  name = "schema-gen"
  path = "src/schema-gen.rs"
